crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@155.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_range_gist select 'empty'::int4range from generate_series(1,500) g;"
---
InsertStmt@0..84
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..27
    Ident@12..27 "test_range_gist"
  Whitespace@27..28 " "
  SelectStmt@28..83
    Select@28..34 "select"
    Whitespace@34..35 " "
    ResTarget@35..53
      TypeCast@35..53
        AConst@35..42
          Sconst@35..42 "'empty'"
        Typecast@42..44 "::"
        TypeName@44..53
          Ident@44..53 "int4range"
    Whitespace@53..54 " "
    From@54..58 "from"
    Whitespace@58..59 " "
    RangeFunction@59..83
      List@59..80
        FuncCall@59..80
          Ident@59..74 "generate_series"
          Ascii40@74..75 "("
          AConst@75..76
            Iconst@75..76 "1"
          Ascii44@76..77 ","
          AConst@77..80
            Iconst@77..80 "500"
      Ascii41@80..81 ")"
      Whitespace@81..82 " "
      Alias@82..83
        Ident@82..83 "g"
  Ascii59@83..84 ";"

