crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@17.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '(,)'::textrange;"
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..23
    TypeCast@7..23
      AConst@7..12
        Sconst@7..12 "'(,)'"
      Typecast@12..14 "::"
      TypeName@14..23
        Ident@14..23 "textrange"
  Ascii59@23..24 ";"

